# hela-showcase

./: .gitignore  CNAME  README.md  generate_data.py  generate_web_app.py  index.html  pyproject.toml
.github/workflows/: github_pages.yaml
beer_catalog/: __init__.py  beer_catalog.py
beer_catalog/datasets/sales/: beer_info.py  orders.py
beer_catalog/datasets/web/: beer_reviews.py  user_interactions.py
beer_catalog/rich_descriptions/: beer_catalog.md  beer_info.md  orders_dataset.md
showcase_data/sales/: beer_info.parquet
showcase_data/sales/orders.parquet/: _common_metadata  _metadata
showcase_data/sales/orders.parquet/date=2021-01-01/: part.0.parquet
showcase_data/sales/orders.parquet/date=2021-09-27/: part.0.parquet
showcase_data/web/beer_reviews.parquet/: _common_metadata  _metadata
showcase_data/web/beer_reviews.parquet/date=2021-01-01/: part.0.parquet
showcase_data/web/beer_reviews.parquet/date=2021-04-16/: part.0.parquet
showcase_data/web/user_interactions.parquet/: _common_metadata  _metadata
showcase_data/web/user_interactions.parquet/date=2021-01-01/: part.0.parquet
showcase_data/web/user_interactions.parquet/date=2021-08-03/: part.0.parquet
