[tool.poetry]
authors = ["Erik Munkby <erik.munkby@gmail.com>"]
description = "A showcase repo demonstrating data catalog package hela."
name = "hela-showcase"
version = "0.1.0"

[tool.poetry.dependencies]
autopep8 = "^1.6.0"
fastparquet = "^0.8.0"
hela = "^0.2.1"
pandas = "^1"
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
google-cloud-bigquery = "^2.34.0"
ipykernel = "^6.9.1"
jupyter = "^1.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
